fixed wrapping issue with button

--- a/src/sales/offers/online-business/styles.css
+++ b/src/sales/offers/online-business/styles.css
@@ -103,7 +103,6 @@ h2.api-error-header {
 
 .btn, .word-break {
   word-wrap: break-word;
-  word-break: break-all;
 }
 section {
   padding: 0px!important;
